Commit for Pk-1722

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/WalletDetailsRecord.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/WalletDetailsRecord.razor
@@ -32,8 +32,15 @@
     <DataGridColumn Field="@nameof(TenantWalletTransactionDto.Timestamp)" Caption="@L["Timestamp"]">
         <DisplayTemplate>@context.Timestamp.ToString("M/d/yyyy h:mm tt")</DisplayTemplate>
     </DataGridColumn>
-    <DataGridColumn Field="@nameof(TenantWalletTransactionDto.TransactionNo)" Caption="@L["TransactionNo"]" />
-    <DataGridColumn  Field="@nameof(TenantWalletTransactionDto.TransactionType)" Caption="@L["TransactionType"]" />
+    <DataGridColumn Field="@nameof(TenantWalletTransactionDto.TransactionNo)" Caption="@L["TransactionNo"]"/>
+      
+   
+    <DataGridColumn  Field="@nameof(TenantWalletTransactionDto.TransactionType)" Caption="@L["TransactionType"]" >
+    <DisplayTemplate>
+            @L["WalletTransactionType:"+context.TransactionType.ToString()]
+    </DisplayTemplate> 
+    
+    </DataGridColumn>
     <DataGridColumn Field="@nameof(TenantWalletTransactionDto.TransactionStatus)" Caption="@L["TransactionStatus"]">
         <DisplayTemplate >
             @if(context.TransactionStatus == WalletDeductionStatus.Completed)
