Commit for Pk-1726

--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCredit.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCredit.razor
@@ -68,7 +68,7 @@
                         <Switch Color="Color.Primary"  TValue="bool" @bind-Checked="Earn.BirthdayBonusEnabled"></Switch>
                     </Column>
                 </Row>
-                    <Divider Class="my-2"></Divider>
+             @*        <Divider Class="my-2"></Divider>
                 <Row Class="px-3">
                     <Column ColumnSize="ColumnSize.Is4">
                         <h5> @L["ShoppingCashbackPoints"]</h5>
@@ -80,7 +80,7 @@
                     <Column Class="d-flex flex-row-reverse" ColumnSize="ColumnSize.Is4">
                         <Switch Color="Color.Primary" TValue="bool" @bind-Checked="Earn.CashbackEnabled"></Switch>
                     </Column>
-                </Row>
+                </Row> *@
                   
                 </CardBody>
             </Card>
