--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditGetSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditGetSetting.razor
@@ -134,7 +134,7 @@
                 </Row>
             </CardBody>
         </Card>
-        <Card>
+      @*   <Card>
             <CardBody>
                 <Row VerticalGutter="10">
                     <Column ColumnSize="ColumnSize.Is3">
@@ -311,7 +311,7 @@
 
                 </Row>
             </CardBody>
-        </Card>
+        </Card> *@
     </Validations>
 </Form>
 
