Commit For Pk-1723

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/ManageWallet.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/ManageWallet.razor
@@ -95,7 +95,7 @@
                                 @PL["TenantWallet:EmailNotification"]
                             </Check>
                         </Div>
-                        <Div Margin="Margin.Is1.FromBottom">
+                    @*     <Div Margin="Margin.Is1.FromBottom">
                             <Check TValue="bool"
                                    @bind-Checked="RechargeFormModel.EnableTextMessageNotifications">
                                 @PL["TenantWallet:TextMessageNotification"]
@@ -106,7 +106,7 @@
                                    @bind-Checked="RechargeFormModel.EnableBackstageNotifications">
                                 @PL["TenantWallet:BackstageNotification"]
                             </Check>
-                        </Div>
+                        </Div> *@
                     </Field>
                     <Field Display="Display.Flex"
                            JustifyContent="JustifyContent.End"
@@ -149,7 +149,7 @@
                                 @PL["TenantWallet:EmailNotification"]
                             </Check>
                         </Div>
-                        <Div Margin="Margin.Is1.FromBottom">
+                       @*  <Div Margin="Margin.Is1.FromBottom">
                             <Check TValue="bool"
                                    @bind-Checked="DeductionFormModel.EnableTextMessageNotifications">
                                 @PL["TenantWallet:TextMessageNotification"]
@@ -160,7 +160,7 @@
                                    @bind-Checked="DeductionFormModel.EnableBackstageNotifications">
                                 @PL["TenantWallet:BackstageNotification"]
                             </Check>
-                        </Div>
+                        </Div> *@
                     </Field>
                     <Field Display="Display.Flex"
                            JustifyContent="JustifyContent.End"
