--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/TenantWalletTransaction.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantWallets/TenantWalletTransaction.razor
@@ -43,7 +43,7 @@
                 <Div Class="compact-card-content">
                     <Text Class="compact-card-text"
                           Style="color: #FD9150FF;">
-                        $@PL["TenantWallet:RechargeAmountOfStored"]
+                        @PL["TenantWallet:RechargeAmountOfStored"]
                     </Text>
                     <Text Class="compact-card-text"
                           Style="font-weight: bold; color: #FD9150FF;">
