#PK-1729 Transaction Description ZH localization for front-end API

--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberShoppingCreditsTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberShoppingCreditsTab.razor
@@ -124,7 +124,7 @@
                     <DisplayTemplate>
                         @if (!string.IsNullOrWhiteSpace(context.OrderNo))
                         {
-                            <Span>@L[context.TransactionDescription] @context.OrderNo</Span>
+                            <Span>@L[context.TransactionDescription, context.OrderNo]</Span>
                         }
                         else
                         {
