--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantLogisticsFeeMangements/LogisticsFeeManagement.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantLogisticsFeeMangements/LogisticsFeeManagement.razor
@@ -323,7 +323,9 @@
         line-height: 1.2;
     }
 
-    
+     .input-group-text span.text-muted {
+    display: none !important;
+}
 
     
 </style>
@@ -475,7 +477,7 @@
                                          Written="OnFileWritten"
                                          Progressed="OnFileProgressed">
                                     <ChildContent>
-                                        <div class="file-drop-zone text-center p-4" style="border: 2px dashed #dee2e6; border-radius: 0.375rem;">
+                                        <div class="file-drop-zone text-center p-5" style="border: 2px dashed #dee2e6; border-radius: 0.375rem;">
                                             <Icon Name="IconName.CloudUploadAlt" Size="IconSize.x2" TextColor="TextColor.Muted" />
                                             <div class="mt-2">
                                                 <strong>@L["DragDropFileHere"]</strong>
